--- a/clm_video.html
+++ b/clm_video.html
@@ -57,11 +57,12 @@
 		<script src="./clmtrackr/examples/js/libs/Stats.js"></script>
     <script src="./tracking.js/build/tracking-min.js"></script>
     <script src="./tracking.js/build/data/face-min.js"></script>
+    <script src="./filterous2.js"></script>
+
 		<div id="content">
 			<h2>Facetracking example</h2>
 			<div id="container">
-				<video id="videoel" width="400" height="300" preload="auto" loop playsinline autoplay>
-				</video>
+        <video id="videoel" width="400" height="300" preload="auto" loop playsinline autoplay style="display: none;"></video>
 				<canvas id="overlay" width="400" height="300"></canvas>
 			</div>
 			<br/>
@@ -187,13 +188,34 @@
 					trackingStarted = true;
 					// start loop to draw face
 					drawLoop();
+          // realtime filtor
 				}
+
+        function filterImage(ctx) {
+          // console.log(filterous);
+          /*
+          filterous.importImage()
+            .applyFilter('brightness', 0.2)
+            .renderHtml();
+
+*/
+          // var ctx = overlayCC;
+          var pixels = ctx.getImageData(0, 0, 400, 300);
+          filterous.applyInstaToCanvas(pixels)
+            .then((newPixels) => {
+              console.log('hoge');
+              ctx.putImageData(newPixels, 0, 0);
+            });
+        }
 
 				function drawLoop() {
           //console.log('[f]', faceRegions);
 					requestAnimFrame(drawLoop);
 					overlayCC.clearRect(0, 0, vid_width, vid_height);
 					//psrElement.innerHTML = "score :" + ctrack.getScore().toFixed(4);
+
+          // カメラの画像を書き出す
+          overlayCC.drawImage(vid, 0, 0, vid_width, vid_height); 
 
 					if (ctrack.getCurrentPosition()) {
             var r = ctrack.getCurrentPosition()
@@ -212,6 +234,8 @@
             overlayCC.rotate(-rad);
             overlayCC.translate(-gx, -gy);
 					}
+          filterImage(overlayCC);
+          // console.log('hage2');
 				}
 
 				/*********** Code for stats **********/
