--- a/clm_video.html
+++ b/clm_video.html
@@ -61,6 +61,13 @@
 
 		<div id="content">
 			<input class="btn" type="button" value="wait, loading video" disabled="disabled" onclick="startVideo()" id="startbutton"></input>
+      <input type="checkbox" id="drawSkeleton">スケルトン表示
+
+      <select id="select" name="select">
+        <option value="pig">ぶた</option>
+        <option value="dog">いぬ</option>
+      </select>
+
 			<h2>Facetracking example</h2>
 			<div id="container">
         <video id="videoel" width="400" height="300" preload="auto" loop playsinline autoplay style="display: none;"></video>
