--- a/clm_beauty.html
+++ b/clm_beauty.html
@@ -58,6 +58,7 @@
     <script src="./tracking.js/build/tracking-min.js"></script>
     <script src="./tracking.js/build/data/face-min.js"></script>
     <script src="./filterous2.js"></script>
+    <script src="glfx.js"></script>
 
 		<div id="content">
 			<input class="btn" type="button" value="wait, loading video" disabled="disabled" onclick="startVideo()" id="startbutton"></input>
@@ -70,8 +71,8 @@
 
 			<h2>Facetracking example</h2>
 			<div id="container">
-        <video id="videoel" width="400" height="300" preload="auto" loop playsinline autoplay style="display: none;"></video>
-				<canvas id="overlay" width="400" height="300"></canvas>
+        <video id="videoel" width="800" height="600" preload="auto" loop playsinline autoplay style="display: none;"></video>
+				<canvas id="overlay" width="800" height="600" style="display: none;"></canvas>
 			</div>
 			<br/>
 
