videoをダイレクトに読み込んで、2d canvasに出力する(3d gl canvasを表に出さない)

--- a/clm_beauty.html
+++ b/clm_beauty.html
@@ -72,7 +72,7 @@
 			<h2>Facetracking example</h2>
 			<div id="container">
         <video id="videoel" width="800" height="600" preload="auto" loop playsinline autoplay style="display: none;"></video>
-				<canvas id="overlay" width="800" height="600" style="display: none;"></canvas>
+        <canvas id="overlay" width="800" height="600"></canvas>
 			</div>
 			<br/>
 
