比較できるように両方表示させる

--- a/glfx_deoise.html
+++ b/glfx_deoise.html
@@ -21,7 +21,7 @@
 
     // replace the image with the canvas
     image.parentNode.insertBefore(canvas, image);
-    image.parentNode.removeChild(image);
+    // image.parentNode.removeChild(image);
 
     // Note: instead of swapping the <canvas> tag with the <img> tag
     // as done above, we could have just transferred the contents of
